test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test
  namespace: default
  labels:
    app: nginx-test
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
