gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-entrypoint
  namespace: gateway-api
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "java-demo.local"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "java-demo.local"
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-local-tls
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: All
